--- a/package.json
+++ b/package.json
@@ -6,11 +6,15 @@
     "bootstrap": "^4.1.3",
     "firebase": "^5.5.8",
     "jquery": "^3.3.1",
+    "moment": "^2.22.2",
+    "moment-timezone": "^0.5.23",
     "popper.js": "^1.14.5",
     "react": "^16.6.3",
-    "react-bootstrap": "^0.32.4",
+    "react-bootstrap": "^1.0.0-beta.3",
     "react-calendar": "^2.17.5",
     "react-dom": "^16.6.3",
+    "react-moment": "^0.8.4",
+    "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "recompose": "^0.30.0"
